--- a/backend/package.json
+++ b/backend/package.json
@@ -1,60 +1,32 @@
 {
-  "name": "yt-backend",
+  "name": "yteq-backend",
   "version": "1.0.0",
-  "description": "Backend API for YT application",
-  "main": "dist/index.js",
+  "description": "YTeq backend API server",
+  "main": "server.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "typecheck": "tsc --noEmit"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "keywords": [
+    "yteq",
     "express",
-    "typescript",
     "postgresql",
-    "stripe",
-    "jwt",
     "api"
   ],
-  "author": "brandmclen-web",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "stripe": "^14.15.0",
+    "stripe": "^14.12.0",
     "jsonwebtoken": "^9.1.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-validator": "^7.0.0",
-    "uuid": "^9.0.1"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.6",
-    "@types/express": "^4.17.21",
-    "@types/pg": "^8.11.4",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jest": "^29.5.11",
-    "ts-node": "^10.9.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "eslint": "^8.56.0",
-    "prettier": "^3.1.1",
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0"
   }
 }
